--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,5 +61,35 @@
             android:layout_height="wrap_content"
             android:padding="16dp"
             tools:text="10:30" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:text="Loader with args:" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/arg1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="arg1" />
+
+            <Button
+                android:id="@+id/arg2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="arg2" />
+
+            <TextView
+                android:id="@+id/loader4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                tools:text="Loading..." />
+        </LinearLayout>
     </LinearLayout>
 </ScrollView>
